gcc/testsuite/g++.dg/concepts/pr95181-2.C
@@ -1,0 +1,8 @@
+// { dg-do compile { target concepts } }
+
+template<bool B> struct g {
+  g() requires B && false;
+  g() requires B;
+};
+
+g<true> b; // error
